# s2i-python-container

./: .gitignore  .gitmodules  .travis.yml  Makefile  README.md  generator.py  manifest-minimal.yml  manifest.sh  manifest.yml  testci
.github/: dependabot.yml
2.7/: Dockerfile  Dockerfile.rhel7  Dockerfile.rhel8  README.md  cccp.yml
3.10/: Dockerfile.fedora  README.md  cccp.yml
3.11/: Dockerfile.c8s  Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel8  Dockerfile.rhel9  README.md
3.11-minimal/: Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel8  README.md
3.12/: Dockerfile.c10s  Dockerfile.c8s  Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel8  Dockerfile.rhel9  README.md
3.12-minimal/: Dockerfile.c10s  Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel10  Dockerfile.rhel8  Dockerfile.rhel9  README.md
3.13/: Dockerfile.c10s  Dockerfile.fedora  README.md
3.13-minimal/: Dockerfile.c10s  Dockerfile.fedora  README.md
3.14/: Dockerfile.c10s  Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel9  README.md
3.14-minimal/: Dockerfile.c10s  Dockerfile.c9s  Dockerfile.fedora  Dockerfile.rhel10  Dockerfile.rhel9  README.md
3.3/: Dockerfile  Dockerfile.rhel7  README.md  cccp.yml
3.4/: Dockerfile  Dockerfile.rhel7  README.md  cccp.yml  content_sets.yml
3.5/: Dockerfile  Dockerfile.fedora  Dockerfile.rhel7  README.md  cccp.yml
3.6/: Dockerfile  Dockerfile.centos8  README.md  (+6 more)
examples/poetry-src-layout-test-app/: pyproject.toml
examples/poetry-src-layout-test-app/.s2i/: environment
examples/poetry-src-layout-test-app/src/poetry_src_layout/: __init__.py
(+337 files in other folders)
